<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_lu"
            android:text="@string/lu_solve_method"
            android:layout_width="@dimen/button_length"
            android:layout_height="@dimen/button_height"/>

        <Button
            android:id="@+id/btn_tridiagonal"
            android:text="@string/tridiagonal_solve_method"
            android:layout_width="@dimen/button_length"
            android:layout_height="@dimen/button_height"/>

        <Button
            android:id="@+id/btn_mfi"
            android:text="@string/fpi_sovle_method"
            android:layout_width="@dimen/button_length"
            android:layout_height="@dimen/button_height"/>

        <Button
            android:id="@+id/btn_seidel"
            android:text="@string/seidel_solve_method"
            android:layout_width="@dimen/button_length"
            android:layout_height="@dimen/button_height"/>

        <Button
            android:id="@+id/btn_jacobi"
            android:text="@string/jacobi_method"
            android:layout_width="@dimen/button_length"
            android:layout_height="@dimen/button_height"/>

        <Button
            android:id="@+id/btn_qr"
            android:text="@string/qr_method"
            android:layout_width="@dimen/button_length"
            android:layout_height="@dimen/button_height"/>

        <Button
            android:id="@+id/btn"
            android:text="@string/qr_method"
            android:layout_width="@dimen/button_length"
            android:layout_height="@dimen/button_height"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>